<resources>
    <string name="offer">আকর্ষণীয় অফার! আপনার ১০ জন বন্ধুকে কলরবের সাথে যুক্ত করে আপনিও পেতে পারেন এই রকম একটি ব্যাগ। বিস্তারিত জানতে
    আমাদের ফেসবুকে ইনবক্স করুন অথবা ওয়েবসাইটে দেখুন!***</string>
    <string name="app_id">696685267147178</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">1b5cd2884253af0674285d8e0448bd4d</string>
    <string name="jobsave">কলরবে দেয়া চাকরির বিজ্ঞপ্তিসমুহ মিরপুর এলাকার নানাবিধ উৎস থেকে সংগৃহীত। এখানে উল্লেখ্য যে, সেভ দি চিলড্রেন বাংলাদেশ কখনই শিশু শ্রমকে উৎসাহিত করে না এবং সংগৃহীত চাকরির তথ্যের সত্যতা যাচাই এর দায়ভার বহন করবে না।
</string>
    <string name="ak_login_protocol_scheme">ak696685267147178</string>
    <string name="uptext">কোথায়\nখুঁজতে চান?</string>
    <string name="app_name">Kolorob</string>
    <string name="action_settings">Settings</string>
    <string name="search"> এখানে লিখে খুঁজুন</string>
    <string name="txt_cd_icon_cat">Icon of the category</string>
    <string name="distance">দূরত্ব</string>
    <string name="aboutus"> কলরব একটি অনন্য প্রচেষ্টা, যার উদ্যোক্তা সেইভ দা চিলড্রেন বাংলাদেশ এবং সহায়তায় রয়েছে সেইভ দা চিলড্রেন অস্ট্রেলিয়া।
যেকোন প্রয়োজনে যোগাযোগ করুন ইমেইলের মাধ্যমে। </string>
    <string name="abouttext">#Kolorob \n#LightingUpTheCity \n#LetsKolorobit </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="feedback5">খুবই সন্তুষ্ট  </string>
    <string name="feedback4">সন্তুষ্ট  </string>
    <string name="feedback3">ঠিক আছে  </string>
    <string name="feedback2">অসন্তুষ্ট  </string>
    <string name="feedback1">খুবই অসন্তুষ্ট  </string>
    <string name="phone_registration">রেজিস্ট্রেশন করুন  </string>
    <string name="verify_registration">মতামত দেয়ার আগে আপনাকে রেজিস্ট্রেশন করতে হবে আপনি কি রেজিস্ট্রেশন করবেন? </string>
    <string name="compare">তুলনা করুন </string>
    <string name="edu_name_ban">তুলনা করুন </string>
    <string name="givepermission">Give permission to get device id</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="disclaimerhead"> মুখবন্ধ </string>
    <string name="abouthead"> কলরবের পরিচয় </string>
    <string name="disclaimertext">কলরব এ্যাপ্লিক্যাশনের সমস্ত কিছুই শুধুমাত্র তথ্য প্রদানে ব্যবহার করার জন্য। যেহেতু কলরবে ব্যবহৃত তথ্যসমূহ নির্দিষ্ট সময়ে (অধিকাংশ সময় পাক্ষিক কালে) হাল-নাগাদ হয় তাই নির্দিষ্ট কোনো সেবা / পন্য ব্যবহার উপযোগী না হলে বা যথাযথ মানসম্পন্ন না হলে বা মেয়াদোত্তীর্ণ হলে কলরব দায়ী নয় ও এসকল সেবার সর্বশেষ অবস্থা/অবস্থান সম্পর্কে ব্যাপারে কলরব নিশ্চয়তা দেয় না ।
কলরবে যেসকল তথ্য বিভিন্ন সংস্থার ওয়েবসাইট ও ইন্টারনেট হতে নেয়া হয়েছে এবং ব্যবহারকারীর অধিকতর সুবিধার্থে কলরবে ব্যবহার করা হয়েছে, এসমস্ত তথ্য কলরবের তথ্য নয় বলে গণ্য হবে এবং তৃতীয় পক্ষ হতে সংগৃহীত এ তথ্যসমূহের দায়ও কলরবের নয়। পন্য এবং বিভিন্ন সেবা সম্পর্কিত তথ্যের জন্য নির্দিষ্ট সেবা প্রদানকারী দায়বদ্ধ, কলরব নয়।
এটা প্রত্যাশিত যে, কলরবের ব্যবহারকারীরা অবশ্যই তথ্য প্রযুক্তি /ডিজিটাল আইন এবং এ সম্পর্কিত অন্যান্য আইন মেনে তথ্য ব্যবহার করবে। কলরবে ব্যবহৃত সকল ছবি, চরিত্র ও তথ্য প্রতীকি অর্থে ব্যবহার করা হয়েছে এবং এর মাধ্যমে কোনো সংস্থা বা ব্যক্তিকে হেয় করা কোনো উদ্দ্যেশ্য নয়।
কলরবের কপিরাইট সেভ দ্য চিলড্রেন কর্তৃক সংরক্ষিত। এই এ্যাপ্লিকেশনের কোনো অংশ কপি বা অনুমতি ছাড়া ব্যবহার করা যাবে না।

 </string>
    <string name="no_internet">দুঃখিত আপনার ইন্টারনেট সংযোগটি সচল নয়</string>
    <string name="first_run_no_internet">কলরব প্রথমবারের মত শুরু হতে যাচ্ছে। অনুগ্রহ পূর্বক ইন্টারনেট সংযোগটি চালু করুন ।</string>
    <string name="update_no_internet">কলরব আপডেট হতে যাচ্ছে। অনুগ্রহ পূর্বক ইন্টারনেট সংযোগটি চালু করুন ।</string>
    <string name="info_not_found">তথ্য পাওয়া যায় নি</string>
    <string name="sorry">দুঃখিত</string>
    <string name="connect_to_internet">আপনার ডিভাইসের ইন্টারনেট চালু করুন</string>
    <string name="step1">১ম ধাপ</string>
    <string name="tutorial_select_district">১ম লিস্ট থেকে আপনার জেলা খুঁজে নিন</string>
    <string name="tutorial_select_cc">২য় লিস্ট থেকে আপনার সিটি কর্পোরেশন খুঁজে নিন</string>
    <string name="step2">২য় ধাপ</string>
    <string name="tutorial_select_ward">লিস্টকে ডানে/বায়ে সরিয়ে আপনার ওয়ার্ড খুঁজে নিন</string>
    <string name="step3">৩য় ধাপ</string>
    <string name="step4">৪র্থ ধাপ</string>
    <string name="select_another_area">তথ্য নেই. দয়া করে অন্য  এলাকা নির্বাচন করুন</string>
    <string name="tutorial_select_area">ওয়ার্ড অনুযায়ী এলাকার লিস্ট থেকে এলাকা খুজে নিচের \'এলাকার তথ্য নামান\' বাটনটি ক্লিক করুন।</string>
    <string name="cant_mail">দুঃখিত! ইমেইল করা যাচ্ছে না</string>
    <string name="cant_call">ফোনে কল দেয়া সম্ভব হচ্ছে না</string>
    <string name="write_name">নাম লিখুন</string>
    <string name="registered_successfully">রেজিস্ট্রেশন সফলভাবে সম্পন্ন হয়েছে</string>
    <string name="thanks_for_registering">রেজিস্ট্রেশন করার জন্য আপনাকে ধন্যবাদ</string>
    <string name="invalid_number">দুঃখিত আপনার ফোন নম্বরটি সঠিক নয়</string>
    <string name="enter_correct_number">অনুগ্রহ পূর্বক সঠিক ফোন নম্বরটি ইনপুট দিন</string>
    <string name="request_for_imei">আপনার ডিভাইস আইডি সংগ্রহের অনুমতি দিন</string>
    <string name="already_registered">এই নাম্বার টি আগেই নিবন্ধিত হয়েছে</string>
    <string name="your_username">আপনার ইউজার নেম</string>
    <string name="and_number">এবং নাম্বারঃ</string>
    <string name="new_install">আপনার ডিভাইসে নতুন করে কলরব সেটআপ হয়েছে</string>
    <string name="try_later">অনুগ্রহ পূর্বক পুনরায় চেষ্টা করুন</string>
    <string name="job_portal_coming_soon">কলরব জব পোর্টাল নতুন রূপে আসছে</string>
    <string name="cant_compare">তুলনা করা সম্ভব হচ্ছে না</string>
    <string name="no_service_selected">আপনি কোন সেবা নির্বাচন করেননি তুলনা করার জন্য</string>
    <string name="select_two_services">আপনি একটি সেবা নির্বাচিত করেছেন । তুলনা করার জন্য দুটি সেবা নির্বাচন করুন</string>
    <string name="incompatible_category_to_compare">বর্তমান ক্যাটাগরির জন্য তুলনা সম্ভব নয়</string>
    <string name="category">ক্যাটাগরি</string>
    <string name="tutorial_select_category">সেবার ধরণ অনুযায়ী তথ্য পেতে এখান থেকে সেবা নির্বাচন করুন</string>
    <string name="job_info">চাকরির তথ্য</string>
    <string name="tutorial_job">এলাকার চাকরির খবর পেতে এখানে ক্লিক করুন</string>
    <string name="search_for_service">সেবা খুঁজুন</string>
    <string name="tutorial_select_service">আপনার পরিচিত সেবা প্রতিষ্ঠানের অথবা সকল প্রতিষ্ঠানের তথ্য লিস্ট অনুসারে দেখতে ক্লিক করুন</string>
    <string name="compare_title">তুলনা</string>
    <string name="tutorial_compare">শিক্ষার বিস্তারিত পেজ থেকে \'তুলনা করুন\' নির্বাচন করে আপনি এখানে ক্লিক করে তুলনা করতে পারবেন</string>
    <string name="menu">মেনু</string>
    <string name="tutorial_emergency">ইমারজেন্সি সুবিধা, টিউটোরিয়াল সহ অন্যান্য বিষয় জানতে বাঁয়ের মেনুতে ক্লিক করুন</string>
    <string name="change_area">এলাকা পাল্টান</string>
    <string name="download_new_area">এখান থেকে নতুন এলাকার তথ্য নামাতে পারবেন</string>
    <string name="new_area_info">নতুন এলাকার তথ্য</string>
    <string name="tutorial_download_new_area">\'নতুন এলাকার তথ্য নামান\' থেকে আপনি অন্যান্য এলাকার তথ্য নামাতে পারবেন</string>
    <string name="change_downloaded_info">নামানো তথ্য পরিবর্তন</string>
    <string name="tutorial_update_info">নামানো এলাকার তথ্য বাতিল অথবা আপডেট করতে ব্যবহার করুন</string>
    <string name="press_back_to_exit">এখান থেকে বের হতে চাইলে আরেকবার চাপ দিন</string>
    <string name="info_deleted">তথ্য ডিলিট করা হয়েছে</string>
    <string name="info_updated">তথ্য আপডেট হয়েছে</string>
    <string name="no_downloaded_area">কোন এলাকার তথ্য নামানো নেই</string>
    <string name="please_wait">দয়া করে অপেক্ষা করুন</string>
    <string name="select_area_first">প্রথমে এলাকা নির্বাচন করুন</string>
    <string name="todays_info">আজকের তথ্য</string>
    <string name="previous_info">দিন আগের তথ্য</string>
    <string name="email_not_found">ই মেইল আই ডি পাওয়া যায়নি</string>
    <string name="phone_not_found">ফোন নাম্বার পাওয়া যায়নি</string>
    <string name="gps_is_off">জিপিএস বন্ধ করা রয়েছে!</string>
    <string name="gps_request">আপনি কি আপনার মোবাইলের জিপিএস টি চালু করতে চান?</string>
    <string name="feedback_accepted">মতামতটি গ্রহন করা হয়েছে</string>
    <string name="thanks_for_feedback">মতামত প্রদান করার জন্য আপনাকে ধন্যবাদ</string>
    <string name="feedback_failed">মতামতটি গ্রহন করা হয় নি</string>
    <string name="ward">ওয়ার্ড</string>
    <string name="police_station">পুলিশ স্টেশন</string>
    <string name="contact_info">যোগাযোগ</string>
    <string name="email">ইমেইল</string>
    <string name="opening_time">খোলার সময়</string>
    <string name="closing_time">বন্ধের সময়</string>
    <string name="weekly_holiday">সাপ্তাহিক বন্ধ</string>
    <string name="other_info">অন্যান্য তথ্য</string>
    <string name="address">ঠিকানা</string>
    <string name="dakshinkhan">দক্ষিণখান</string>
    <string name="uname">kolorobapp</string>
    <string name="password">2Jm!4jFe3WgBZKEN</string>
    <string name="password_reg">!2Jm4jFe3WgBZKEN</string>
    <string name="downloading_data">তথ্য সংগ্রহ চলছে</string>
    <string name="institution_type">প্রতিষ্ঠানের  ধরণ</string>
    <string name="speciality">বিশেষত্ব</string>
    <string name="entry_fee">প্রবেশ মূল্য</string>
    <string name="applicable">প্রযোজ্য</string>
    <string name="emergency_service">ইমারজেন্সি সুবিধা</string>
    <string name="not_available">নেই</string>
    <string name="available">আছে</string>
    <string name="emergency_number">ইমারজেন্সি নাম্বার</string>
    <string name="ambulance_service">এ্যাম্বুলেন্স সুবিধা</string>
    <string name="ambulance_number">এ্যাম্বুলেন্স নাম্বার</string>
    <string name="maternity_service">মাতৃত্বজনিত সুবিধা</string>
    <string name="maternity_services">মাতৃসেবাসমূহ</string>
    <string name="maternity_privacy">মাতৃসেবার বিশেষ ব্যবস্থা</string>
    <string name="doctor_availability">ডাক্তারের সুবিধা</string>
    <string name="vaccine_facility">ভ্যাক্সিন সুবিধা</string>
    <string name="services">সেবাসমূহ</string>
    <string name="services_for">যাদের জন্য প্রযোজ্য</string>
    <string name="other_services">অন্যান্য সেবা</string>
    <string name="drop_time">অবস্থানের সময়</string>
    <string name="fee">ফি</string>
    <string name="religion">ধর্ম</string>
    <string name="services_for_religion">যেসব ধর্মের জন্য প্রযোজ্য</string>
    <string name="other_religions">অন্যান্য ধর্ম</string>
    <string name="drop_time_limit">অবস্থানের সময়সীমা</string>
    <string name="shift">শাখা</string>
    <string name="num_of_students">ছাত্রছাত্রী সংখ্যা</string>
    <string name="num_of_teachers">শিক্ষক সংখ্যা</string>
    <string name="avg_students">ছাত্রছাত্রী সংখ্যা (গড়)</string>
    <string name="facilities">সুযোগ সুবিধা</string>
    <string name="count_people">জন</string>
    <string name="scholarship">বৃত্তি সুবিধা</string>
    <string name="primary_fee">প্রাইমারী লেভেলের বেতন (বার্ষিক)</string>
    <string name="secondary_fee">সেকেন্ডারি লেভেলের বেতন (বার্ষিক)</string>
    <string name="college_fee">কলেজের বেতন (বার্ষিক)</string>
    <string name="num_examinee">পরীক্ষায় অংশগ্রহণকারী শিক্ষার্থীর সংখ্যা</string>
    <string name="passed">উত্তীর্ণ শিক্ষার্থীর সংখ্যা</string>
    <string name="gpa_5">জিপিএ ৫ এর সংখ্যা</string>
    <string name="golden_5">গোল্ডেন জিপিএ ৫ এর সংখ্যা</string>
    <string name="course_duration">কোর্সের ব্যাপ্তিকাল (মাস)</string>
    <string name="training_name">ট্রেইনিং এর নাম</string>
    <string name="cost">খরচ</string>
    <string name="course_name">কোর্সের নাম</string>
    <string name="taka">টাকা</string>
    <string name="service_type">সুবিধার ধরণ</string>
    <string name="registration_permission">আপনি কি রেজিস্ট্রেশন করতে চান?</string>
    <string name="registration_required">রেজিস্ট্রেশন করতে হবে</string>
    <string name="select_ward">ওয়ার্ড নির্বাচন করুন</string>
    <string name="select_area">এলাকা নির্বাচন করুন</string>
    <string name="download_area">এলাকার তথ্য নামান</string>
    <string name="select_cc">সিটি কর্পোরেশন নির্বাচন করুন</string>
    <string name="select_district">জেলা নির্বাচন করুন</string>
</resources>