<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/rounded"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="মতামত"
        android:textColor="@color/orange"


        android:textSize="25sp"
        android:layout_gravity="center" />

    <RadioGroup
        android:layout_width="match_parent"
        android:id="@+id/feedRadio"
        android:layout_height="wrap_content"
      android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="left">


        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedback1"
            android:layout_marginLeft="1dp"
            android:textColor="@color/orange"
            android:id="@+id/bad" />



        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedback2"
            android:layout_marginLeft="1dp"
            android:textColor="@color/orange"

            android:id="@+id/moderate" />



        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedback3"
            android:textColor="@color/orange"

            android:id="@+id/good" />


        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedback4"
            android:textColor="@color/orange"
            android:checked="true"
            android:id="@+id/feedback4" />


        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedback5"
            android:textColor="@color/orange"

            android:id="@+id/feedback5" />




    </RadioGroup>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="বিস্তারিত লিখুন"
            android:textColor="@color/orange"


            android:textSize="17sp"
            />



        <EditText
            android:id="@+id/feedback_comment"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="মতামত"
            android:gravity="center"
            android:background="@color/white"
            android:lines="4"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center">


        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/tick_icon_feedback"
            android:layout_gravity="center_horizontal"

            android:layout_marginRight="10dp"
            />


        <Button
            android:id="@+id/btnclose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/cross_icon_feedback"
            android:layout_gravity="center_horizontal"
            android:onClick="phonecall"
            />
    </LinearLayout>


</LinearLayout>