<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/WhiteSmoke"
    android:orientation="vertical"
    android:padding="2dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/WhiteSmoke"
            android:orientation="vertical"
            android:weightSum="3">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/transparent"
                android:padding="25dp"></RelativeLayout>


            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="top|center"
                android:orientation="vertical"
                android:padding="@dimen/paddingforplacetext">

                <LinearLayout
                    android:id="@+id/districtLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/chooseDistrict"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left|top"
                        android:paddingBottom="@dimen/paddingforplacetext"
                        android:text="@string/select_district"
                        android:textSize="@dimen/offercounterbtn" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#000000"
                        android:padding="3dp" />



                    <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
                        android:id="@+id/districtRecycler_view"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:scrollbars="none" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#000000"
                        android:padding="3dp" />



                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ccLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:visibility="invisible">


                    <TextView
                        android:id="@+id/ccorporation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left|top"
                        android:paddingBottom="@dimen/paddingforplacetext"
                        android:paddingTop="@dimen/paddingforplacetext"
                        android:text="@string/select_cc"
                        android:textSize="@dimen/offercounterbtn" />


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#000000"
                        android:padding="3dp" />




                    <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
                        android:id="@+id/cityrecycler_view"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:scrollbars="none" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#000000"
                        android:padding="3dp" />



                </LinearLayout>


                <LinearLayout
                    android:id="@+id/wardLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:visibility="invisible">


                <TextView
                        android:id="@+id/chooseward"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left|top"
                        android:paddingBottom="@dimen/paddingforplacetext"
                        android:paddingTop="@dimen/paddingforplacetext"
                        android:text="@string/select_ward"
                        android:textSize="@dimen/offercounterbtn" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#000000"
                        android:padding="3dp" />




                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recycler_view"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:scrollbars="none" />


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#000000"
                        android:padding="3dp" />



                </LinearLayout>


                <LinearLayout
                    android:id="@+id/areaLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:visibility="invisible">



                <TextView
                        android:id="@+id/choosearea"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:paddingBottom="@dimen/paddingforplacetext"
                        android:paddingTop="@dimen/paddingforplacetext"
                        android:text="@string/select_area"
                        android:textSize="@dimen/offercounterbtn" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#000000"
                        android:padding="3dp" />


                    <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
                        android:id="@+id/recycler_view2"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:scrollbars="none" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#000000"
                        android:padding="3dp" />



                </LinearLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:padding="@dimen/defaultpadding">

                    <Button

                        android:id="@+id/submittoserverarea"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_centerInParent="true"
                        android:background="@color/colorPrimary"
                        android:visibility="invisible"
                        android:padding="@dimen/regsubbtn"
                        android:text="@string/download_area"
                        android:textColor="@color/White"
                        android:textSize="@dimen/offercounterbtn" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>


